# TEASER-plusplus

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  THANKS.md  package.xml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions.md
.github/workflows/: main.yml
cmake/: GoogleTest.CMakeLists.txt.in  TEASERPPConfig.cmake  pmc.CMakeLists.txt.in  pybind11.CMakeLists.txt.in  spectra.CMakeLists.txt.in  teaserppConfig.cmake  tinyply.CMakeLists.txt.in
cmake/modules/: FindLAPACK.cmake  FindMKL.cmake  FindSphinx.cmake
conda-recipes/: README.md
conda-recipes/teaserpp-python/: build.sh  meta.yaml
conda.recipe/: meta.yaml
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  api-cpp.rst  api-matlab.rst  api-python.rst  api_cpp.rst  api_matlab.rst  api_python.rst  conf.py  index.rst  installation.rst  known_issues.rst  overview.dox  quickstart.rst  requirements.txt
examples/: .gitignore  README.md
examples/cpp_fpfh/: CMakeLists.txt
examples/cpp_ply/: CMakeLists.txt
examples/example_data/: README.md
examples/example_data/3dmatch_sample/: cloud_bin_2.ply  cloud_bin_2.ply_0.150000_16_1.750000_3DSmoothNet.npz  cloud_bin_36.ply_0.150000_16_1.750000_3DSmoothNet.npz
examples/example_data/3dmatch_sample/01_Keypoints/: cloud_bin_2Keypoints.txt  cloud_bin_36Keypoints.txt
examples/python_3dsmooth/: bench_utils.py  python_3dsmooth.py
examples/teaser_cpp_fpfh/: CMakeLists.txt  quatro_cpp_fpfh.cc  teaser_cpp_fpfh.cc
examples/teaser_cpp_ply/: CMakeLists.txt  teaser_cpp_ply.cc
examples/teaser_python_3dsmooth/: line_mesh.py  render_option.json  teaser_python_3dsmooth.py
examples/teaser_python_fpfh_icp/: example.py  helpers.py  readme.md
examples/teaser_python_fpfh_icp/data/: cloud_bin_4.ply
examples/teaser_python_ply/: teaser_python_ply.py
matlab/: CMakeLists.txt  README.md  teaser_mex.cc  teaser_mex_utils.h  teaser_solve.m  teaser_solve_test.m
python/: CMakeLists.txt  README.md  setup.py.in
python/teaserpp_python/: __init__.py  _teaserpp.pyi  teaserpp_batch_example.py  teaserpp_example.py  teaserpp_python.cc
teaser/: CMakeLists.txt
teaser/include/teaser/: certification.h  evaluation.h  fpfh.h  geometry.h  graph.h  linalg.h  macros.h  matcher.h  ply_io.h  registration.h  utils.h
teaser/src/: certification.cc  evaluation.cc  fpfh.cc  graph.cc  matcher.cc  ply_io.cc  registration.cc
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  main.cc  registration-benchmark.cc
test/benchmark/data/benchmark_1/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_est.csv  src.ply  t_est.csv  t_ref.csv
test/benchmark/data/benchmark_2/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_ref.csv  src.ply  t_est.csv  t_ref.csv
test/benchmark/data/benchmark_3/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_est.csv  src.ply  t_est.csv  t_ref.csv
test/benchmark/data/benchmark_4/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_est.csv  src.ply  t_est.csv  t_ref.csv
test/benchmark/data/benchmark_5/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_est.csv  src.ply  t_est.csv  t_ref.csv
test/benchmark/data/benchmark_6/: R_est.csv  R_ref.csv  dst.ply  parameters.txt  s_est.csv  s_ref.csv  src.ply  t_est.csv  t_ref.csv
test/teaser/: CMakeLists.txt  certification-test.cc  evaluation-test.cc  feature-test.cc  geometry-test.cc  graph-test.cc  io-test.cc  linalg-test.cc  matcher-test.cc  registration-test.cc  rotation-solver-test.cc  scale-solver-test.cc  tls-test.cc  translation-solver-test.cc  utils-test.cc
test/teaser/data/: bunny_fpfh.csv  canstick.ply  matcher-test-matches-1.csv  matcher-test-object-1.ply  matcher-test-scene-1.ply
test/teaser/data/certification_large_instances/case_1/: R_est.csv  R_gt.csv  mu.csv  omega.csv  parameters.txt  q_est.csv  q_gt.csv  suboptimality_1st_iter.csv  suboptimality_traj.csv  theta_gt.csv  v1.csv  v2.csv
test/teaser/data/certification_large_instances/case_2/: R_est.csv  parameters.txt  q_est.csv  suboptimality_1st_iter.csv  suboptimality_traj.csv  theta_est.csv  v1.csv  v2.csv
test/teaser/data/certification_small_instances/case_1/: A_inv.csv  M_affine_1st_iter.csv  Q_cost.csv  R_est.csv  R_gt.csv  W_dual_1st_iter.csv  block_diag_omega.csv  lambda_bar_init.csv  mu.csv  omega.csv  parameters.txt  q_est.csv  q_gt.csv  suboptimality_traj.csv  theta_gt.csv  v1.csv  v2.csv
test/teaser/data/certification_small_instances/case_2/: A_inv.csv  M_affine_1st_iter.csv  Q_cost.csv  R_est.csv  R_gt.csv  W_1st_iter.csv  W_dual_1st_iter.csv  block_diag_omega.csv  lambda_bar_init.csv  mu.csv  q_est.csv  suboptimality_traj.csv  theta_est.csv  v1.csv
test/teaser/data/certification_small_instances/case_3/: A_inv.csv  M_affine_1st_iter.csv  Q_cost.csv  R_est.csv  R_gt.csv  W_1st_iter.csv  W_dual_1st_iter.csv  block_diag_omega.csv  lambda_bar_init.csv  omega.csv  q_est.csv  q_gt.csv  suboptimality_traj.csv  theta_gt.csv  v1.csv  v2.csv
test/teaser/data/certification_test/case_1/: M_affine_1st_iter.csv  W_1st_iter.csv  W_dual_1st_iter.csv  case_1.mat  parameters.json  q.csv  suboptimality_1st_iter.csv  theta.csv
test/teaser/data/certification_test/case_2/: omega.csv  q_gt.csv  suboptimality_1st_iter.csv  v2.csv
test/teaser/data/certification_test/case_3/: mu.csv  suboptimality_1st_iter.csv
test/teaser/data/registration_test/: 1000point_model.ply  1000point_scene.ply  fixed_scale_inliers.csv  objectIn.csv  rotation_only_dst.csv  rotation_only_src.csv  sceneIn.csv  translation_test_v1_inliers.csv  translation_test_v2_inliers.csv
test/test-tools/: CMakeLists.txt  test_utils.h
